# scripts-python

./: .coveragerc  .dockerignore  .env.example  .env.no_conformidades  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COVERAGE_ANALYSIS.md  Dockerfile  Dockerfile.dev  Dockerfile.windows  GEMINI.md  PROJECT_STRUCTURE.md  PROYECTO_LIMPIO.md  README-Windows-Containers.md  README.md  README_docker.md  RESUMEN_CORRECCIONES_NOCONFORMIDADES.md  TESTING_SYSTEM.md  access_to_sqlite_sync.py  check_tables.py  continuous_runner.py  coverage.json  demo_consulta_agedys.py  docker-compose.windows.yml  docker-compose.yml  docker-run.bat  docker-run.sh  explicacion_archivos.md  panel_control.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_EnviarCorreo.py  run_brass.py  run_expedientes.py  run_noconformidades.py  run_riesgos.py  run_tests.py  (+29 more)
analysis/: Dockerfile
config/: .env.example
dbs-locales/: AGEDYS_DATOS.laccdb  AGEDYS_DATOS.md  Gestion_Brass_Gestion_Datos.md  Gestion_Riesgos_Datos.md  README.md  Tareas_datos1.laccdb
dbs-sqlite/: AGEDYS_DATOS.sqlite  Expedientes_datos.sqlite  Gestion_Brass_Gestion_Datos.sqlite  Gestion_Riesgos_Datos.sqlite  Lanzadera_Datos.sqlite  NoConformidades_Datos.sqlite  Solicitudes_HPS_datos.sqlite  Tareas_datos1.sqlite  correos_datos.sqlite
docs/: Gestion_Riesgos_mejoras2.md  Gestion_riesgos_mejoras1.md  NO_CONFORMIDADES.md  Plan_Accion_Mejoras_Riesgos.md  Problemas_actuales.md  Pulido_final_tests.txt  adaptacion_funciones_usuarios.md  coverage_setup_summary.md  docker_guia.md  htmlcov_usage_guide.md  migracion_riesgos.md  (+5 more)
(+326 files in other folders)
