[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml --tb=short"
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/emails",
]
pythonpath = [
    "src",
]
markers = [
    "integration: marks tests as integration tests that require real databases",
    "unit: marks tests as unit tests (isolated components)",
    "emails: marks tests as email functionality tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: marks tests as smoke tests (quick validation)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "UP", # pyupgrade
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
]
ignore = [
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]